# fspx

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/api/: index.rst
docs/api/core/: autofortran_directive.rst  fortran_parser.rst  index.rst
docs/conf/: index.rst
docs/example/: example.f90  index.rst
src/fspx/: __init__.py  autofortran_directive.py  fortran_parser.py  fortran_parser_ford.py
src/fspx/domains/fortran/: __init__.py  _object.py
tests/: test_spxf.py
